Sprint 1 - Fix code (#4)
Co-authored-by: Lino De Ruvo <lino.deruvo@aurigaspa.com>
Co-authored-by: linoderuvo <linoderuvo@gmail.com>
Co-authored-by: Simone Munao <simone.munao@nttdata.com>